# hsdm

./: Makefile  PAM.hs  X11.hs  default.nix  hsdm-config.nix  hsdm-module.nix  hsdm.hs  hsdm.nix  hsdm_config.nix  hsdm_module.nix  launch-xnest  pam_test.hs
haskell/: LICENSE.md  hsdm.cabal  run-repl
haskell/res/: hsdm.ui
haskell/src/: GTKTest.hs  Main.hs  PAMTest.hs  X11Test.hs
haskell/src/Control/FRPNow/: GTK3.hs
haskell/src/System/: HSDM.hs
haskell/src/System/HSDM/: GTKRedo.hs  PAM.hs  UI.hs  X11.hs  X11Redo.hs
haskell/src/System/HSDM/PAM/: Internals.chs
