name:                     hsdm
author:                   Remy Goldschmidt, Michael Bishop
version:                  0.0.1
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 System
copyright:                2016 Remy Goldschmidt <taktoa@gmail.com>
extra-source-files:       README.md
maintainer:               taktoa@gmail.com
homepage:                 https://github.com/taktoa/hsdm
bug-reports:              https://github.com/taktoa/hsdm/issues
license-file:             LICENSE.md
license:                  MIT
synopsis:                 A display manager, written in Haskell.
description:              A display manager, written in Haskell.

source-repository head
    type:     git
    location: https://github.com/taktoa/hsdm.git
                          
library
    build-depends:        base                == 4.*
                        , bytestring          == 0.10.*
                        , lens                == 4.13.*
                        , unix                == 2.7.*
                        , process             == 1.2.*
                        , X11                 == 1.6.*
                        , aeson               == 0.9.*
                        , array               == 0.5.*
                        , colour              == 2.3.*
                        , data-default        == 0.5.*
                        , diagrams-lib        == 1.3.*
                        , diagrams-rasterific == 1.3.*
                        , JuicyPixels         == 3.2.*
                        , mtl                 == 2.2.*
                        , random              == 1.1.*
                        , rasterific-svg      == 0.3.*
                        , semigroups          == 0.18.*
                        , exceptions          == 0.8.*
                        , containers          == 0.5.*
                        , pipes               == 4.1.*
                        , pipes-concurrency   == 2.0.*
                        , async               == 2.1.*
    default-language:     Haskell2010
    exposed-modules:      System.HSDM
                          System.HSDM.X11
                          System.HSDM.PAM
                          System.HSDM.PAM.Internals
    extra-libraries:      pam
    ghc-options:          -Wall -O2 -threaded -g
                          -fno-warn-type-defaults
                          -fno-warn-unused-do-bind
    ghc-prof-options:     -auto-all -prof
    hs-source-dirs:       src
    build-tools:          c2hs

executable x11-test
    build-depends:        base == 4.*, hsdm
    default-language:     Haskell2010
    ghc-options:          -Wall -O2 -threaded
    main-is:              src/X11Test.hs
    
executable pam-test
    build-depends:        base == 4.*, hsdm
    default-language:     Haskell2010
    ghc-options:          -Wall -O2 -threaded
    main-is:              src/PAMTest.hs

executable hsdm
    build-depends:        base == 4.*, hsdm
    default-language:     Haskell2010
    ghc-options:          -Wall -O2 -threaded -g
    main-is:              src/Main.hs
